Stub GET and POST operations.
